Ventanas de login y menu ya son modales

--- a/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.rc
+++ b/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.rc
@@ -50,15 +50,15 @@ END
 // Dialog
 //
 
-DLG_MENUPRINCIPAL DIALOGEX 0, 0, 390, 237
-STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_CENTER | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU
+DLG_VENTANAPRINCIPAL DIALOGEX 0, 0, 390, 237
+STYLE DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_CENTER | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Bienvendio al Menu Principal!!"
 FONT 9, "Comic Sans MS", 400, 0, 0x0
 BEGIN
 END
 
 DLG_INICIOSESION DIALOGEX 0, 0, 211, 140
-STYLE DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_CENTER | WS_POPUP | WS_CAPTION
+STYLE DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_CENTER | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Validacion de Credenciales"
 FONT 9, "Comic Sans MS", 400, 0, 0x0
 BEGIN
@@ -82,7 +82,7 @@ END
 #ifdef APSTUDIO_INVOKED
 GUIDELINES DESIGNINFO
 BEGIN
-    DLG_MENUPRINCIPAL, DIALOG
+    DLG_VENTANAPRINCIPAL, DIALOG
     BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 383
@@ -113,7 +113,7 @@ END
 // AFX_DIALOG_LAYOUT
 //
 
-DLG_MENUPRINCIPAL AFX_DIALOG_LAYOUT
+DLG_VENTANAPRINCIPAL AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
