--- a/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.rc
+++ b/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.rc
@@ -62,15 +62,15 @@ STYLE DS_ABSALIGN | DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_CE
 CAPTION "Validacion de Credenciales"
 FONT 9, "Comic Sans MS", 400, 0, 0x0
 BEGIN
+    EDITTEXT        TXTB_INICIOSESION_USUARIO,70,41,122,14,ES_UPPERCASE | ES_AUTOHSCROLL
+    EDITTEXT        TXTB_INICIOSESION_CONTRASENA,70,63,122,14,ES_PASSWORD | ES_AUTOHSCROLL
+    PUSHBUTTON      "Ingresar",BTN_INICIOSESION_INGRESAR,19,86,173,23
+    PUSHBUTTON      "Registrarse",BTN_INICIOSESION_REGISTRARSE,19,109,86,24
+    PUSHBUTTON      "Salir",BTN_INICIOSESION_SALIR,105,109,87,24
     LTEXT           "Bienvenido al Sistema de Control de Vacunacion FCFM!",IDC_STATIC,19,7,172,8
     LTEXT           "Por favor, Inserte sus credenciales:",IDC_STATIC,48,19,115,8
     LTEXT           "Usuario:",IDC_STATIC,19,44,28,8
     LTEXT           "Contraseña:",IDC_STATIC,19,66,38,8
-    EDITTEXT        TXTB_USUARIO,70,41,122,14,ES_UPPERCASE | ES_AUTOHSCROLL
-    EDITTEXT        TXTB_CONTRASENA,70,63,122,14,ES_PASSWORD | ES_AUTOHSCROLL
-    PUSHBUTTON      "Ingresar",BTN_INGRESAR,19,86,173,23
-    PUSHBUTTON      "Cancelar / Salir",BTN_SALIR,105,109,87,24
-    PUSHBUTTON      "Registrarse",BTN_REGISTRARSE,19,109,86,24
 END
 
 DLG_REGISTROPERSONAS DIALOGEX 0, 0, 356, 256
@@ -78,8 +78,26 @@ STYLE DS_ABSALIGN | DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_CE
 CAPTION "Bienvenido a Registro de Personas!"
 FONT 10, "Comic Sans MS", 400, 0, 0x0
 BEGIN
-    LTEXT           "ACABA DE ACCEDER A LA OPCIÓN DE REGISTRAR PERSONA",IDC_STATIC,70,7,191,8
-    LTEXT           "POR FAVOR, REGISTRE TODOS LOS DATOS DE LA PERSONA",IDC_STATIC,93,19,193,8
+    EDITTEXT        TXTB_PERSONA_APELLIDOPATERNO,28,34,84,14,ES_UPPERCASE | ES_AUTOHSCROLL
+    EDITTEXT        TXTB_PERSONA_APELLIDOMATERNO,135,34,84,14,ES_UPPERCASE | ES_AUTOHSCROLL
+    EDITTEXT        TXTB_PERSONA_NOMBRE,244,34,84,14,ES_UPPERCASE | ES_AUTOHSCROLL
+    EDITTEXT        TXTB_PERSONA_CURP,28,61,84,14,ES_UPPERCASE | ES_AUTOHSCROLL
+    EDITTEXT        TXTB_PERSONA_RFC,135,61,84,14,ES_UPPERCASE | ES_AUTOHSCROLL
+    CONTROL         "",DTP_PERSONA_FECHANACIMIENTO,"SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,245,61,83,15
+    EDITTEXT        TXTB_PERSONA_CALLE,28,87,84,14,ES_UPPERCASE | ES_AUTOHSCROLL
+    EDITTEXT        TXTB_PERSONA_COLONIA,135,87,84,14,ES_UPPERCASE | ES_AUTOHSCROLL
+    EDITTEXT        TXTB_PERSONA_MUNICIPIO,244,87,84,14,ES_UPPERCASE | ES_AUTOHSCROLL
+    EDITTEXT        TXTB_PERSONA_ESTADO,28,116,84,14,ES_UPPERCASE | ES_AUTOHSCROLL
+    COMBOBOX        CB_PERSONA_ESTADOCIVIL,136,117,84,30,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        TXTB_PERSONA_TELEFONO,244,116,84,14,ES_AUTOHSCROLL | ES_NUMBER
+    COMBOBOX        CB_PERSONA_SEXO,28,146,84,30,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        CB_PERSONA_GRUPOOCUPACIONAL,135,146,84,30,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        CB_PERSONA_PERFILRIESGO,244,146,84,30,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "CARGAR DOCUMENTO DE IDENTIDAD",BTN_PERSONA_CARGARDOCUMENTO,7,178,135,71,BS_CENTER | BS_VCENTER | BS_MULTILINE
+    PUSHBUTTON      "CAPTURAR PERSONA",BTN_PERSONA_CAPTURAR,286,178,63,71,BS_CENTER | BS_VCENTER | BS_MULTILINE
+    PUSHBUTTON      "SALIR AL MENU ANTERIOR",BTN_PERSONA_REGRESAR,223,178,63,71,BS_CENTER | BS_VCENTER | BS_MULTILINE
+    LTEXT           "ACABA DE ACCEDER A LA OPCIÓN DE REGISTRAR PERSONA",IDC_STATIC,83,7,191,8
+    LTEXT           "POR FAVOR, REGISTRE TODOS LOS DATOS DE LA PERSONA",IDC_STATIC,82,16,193,8
     LTEXT           "APELLIDO PATERNO",IDC_STATIC,37,50,66,8
     LTEXT           "APELLIDO MATERNO",IDC_STATIC,144,50,68,8
     LTEXT           "NOMBRE(S)",IDC_STATIC,267,50,38,8
@@ -96,26 +114,8 @@ BEGIN
     LTEXT           "SEXO",IDC_STATIC,61,161,19,8
     LTEXT           "GRUPO OCUPACIONAL",IDC_STATIC,142,161,73,8
     LTEXT           "PERFIL DE RIESGO",IDC_STATIC,255,161,62,8
-    EDITTEXT        IDC_EDIT1,135,34,84,14,ES_UPPERCASE | ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT2,244,34,84,14,ES_UPPERCASE | ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT3,28,34,84,14,ES_UPPERCASE | ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT4,28,61,84,14,ES_UPPERCASE | ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT5,135,61,84,14,ES_UPPERCASE | ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT7,135,87,84,14,ES_UPPERCASE | ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT8,28,87,84,14,ES_UPPERCASE | ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT9,244,87,84,14,ES_UPPERCASE | ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT10,28,116,84,14,ES_UPPERCASE | ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT12,244,116,84,14,ES_AUTOHSCROLL | ES_NUMBER
-    COMBOBOX        IDC_COMBO1,136,117,84,30,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "",IDC_DATETIMEPICKER1,"SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,245,61,83,15
-    COMBOBOX        IDC_COMBO2,28,146,84,30,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBO3,135,146,84,30,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBO4,244,146,84,30,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "DATOS PERSONA",GB_DATOSPERSONA,7,24,342,150
-    PUSHBUTTON      "CARGAR DOCUMENTO DE IDENTIDAD",IDC_BUTTON1,7,173,140,76,BS_CENTER | BS_VCENTER | BS_MULTILINE
-    PUSHBUTTON      "CAPTURAR PERSONA",IDC_BUTTON3,286,173,63,76,BS_CENTER | BS_VCENTER | BS_MULTILINE
-    PUSHBUTTON      "SALIR AL MENU ANTERIOR",IDC_BUTTON4,223,173,63,76,BS_CENTER | BS_VCENTER | BS_MULTILINE
-    CTEXT           "<-------- (INE, Pasaporte, Licencia, Cartilla Militar, Cartilla de vacunación)",IDC_STATIC,147,178,62,42
+    GROUPBOX        "DATOS PERSONA",GB_PERSONA_DATOSPERSONA,7,24,342,147
+    CTEXT           "<-------- (INE, Pasaporte, Licencia, Cartilla Militar, Cartilla de vacunación)",IDC_STATIC,147,199,62,42
 END
 
 
@@ -169,6 +169,8 @@ BEGIN
         HORZGUIDE, 135
         HORZGUIDE, 152
         HORZGUIDE, 165
+        HORZGUIDE, 171
+        HORZGUIDE, 178
         HORZGUIDE, 199
     END
 END
@@ -235,33 +237,33 @@ END
 
 DLG_REGISTROPERSONAS DLGINIT
 BEGIN
-    IDC_COMBO1, 0x403, 11, 0
+    CB_PERSONA_ESTADOCIVIL, 0x403, 11, 0
 0x4f53, 0x544c, 0x5245, 0x284f, 0x2941, "\000" 
-    IDC_COMBO1, 0x403, 10, 0
+    CB_PERSONA_ESTADOCIVIL, 0x403, 10, 0
 0x4143, 0x4153, 0x4f44, 0x4128, 0x0029, 
-    IDC_COMBO1, 0x403, 14, 0
+    CB_PERSONA_ESTADOCIVIL, 0x403, 14, 0
 0x4944, 0x4f56, 0x4352, 0x4149, 0x4f44, 0x4128, 0x0029, 
-    IDC_COMBO1, 0x403, 9, 0
+    CB_PERSONA_ESTADOCIVIL, 0x403, 9, 0
 0x4956, 0x4455, 0x284f, 0x2941, "\000" 
-    IDC_COMBO2, 0x403, 10, 0
+    CB_PERSONA_SEXO, 0x403, 10, 0
 0x414d, 0x4353, 0x4c55, 0x4e49, 0x004f, 
-    IDC_COMBO2, 0x403, 9, 0
+    CB_PERSONA_SEXO, 0x403, 9, 0
 0x4546, 0x454d, 0x494e, 0x4f4e, "\000" 
-    IDC_COMBO3, 0x403, 11, 0
+    CB_PERSONA_GRUPOOCUPACIONAL, 0x403, 11, 0
 0x5345, 0x5554, 0x4944, 0x4e41, 0x4554, "\000" 
-    IDC_COMBO3, 0x403, 11, 0
+    CB_PERSONA_GRUPOOCUPACIONAL, 0x403, 11, 0
 0x5254, 0x4241, 0x4a41, 0x4441, 0x524f, "\000" 
-    IDC_COMBO3, 0x403, 12, 0
+    CB_PERSONA_GRUPOOCUPACIONAL, 0x403, 12, 0
 0x4544, 0x4553, 0x504d, 0x454c, 0x4441, 0x004f, 
-    IDC_COMBO3, 0x403, 15, 0
+    CB_PERSONA_GRUPOOCUPACIONAL, 0x403, 15, 0
 0x4d41, 0x2841, 0x294f, 0x4420, 0x2045, 0x4143, 0x4153, "\000" 
-    IDC_COMBO3, 0x403, 5, 0
+    CB_PERSONA_GRUPOOCUPACIONAL, 0x403, 5, 0
 0x544f, 0x4f52, "\000" 
-    IDC_COMBO4, 0x403, 5, 0
+    CB_PERSONA_PERFILRIESGO, 0x403, 5, 0
 0x4c41, 0x4f54, "\000" 
-    IDC_COMBO4, 0x403, 9, 0
+    CB_PERSONA_PERFILRIESGO, 0x403, 9, 0
 0x4f4d, 0x4544, 0x4152, 0x4f44, "\000" 
-    IDC_COMBO4, 0x403, 5, 0
+    CB_PERSONA_PERFILRIESGO, 0x403, 5, 0
 0x4142, 0x4f4a, "\000" 
     0
 END
