Se agregó la clase Persona, y se agrego la funcion de AgregarPersona, falta hacer que se pueda mandar a llamar la funcion

--- a/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.vcxproj
+++ b/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="cVentanaMenuPrincipal.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="cCapturaPersona.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
