--- a/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.rc
+++ b/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.rc
@@ -78,21 +78,21 @@ STYLE DS_ABSALIGN | DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_CE
 CAPTION "Bienvenido a Registro de Personas!"
 FONT 10, "Comic Sans MS", 400, 0, 0x0
 BEGIN
-    EDITTEXT        TXTB_PERSONA_APELLIDOPATERNO,28,34,84,14,ES_UPPERCASE | ES_AUTOHSCROLL
-    EDITTEXT        TXTB_PERSONA_APELLIDOMATERNO,135,34,84,14,ES_UPPERCASE | ES_AUTOHSCROLL
-    EDITTEXT        TXTB_PERSONA_NOMBRE,244,34,84,14,ES_UPPERCASE | ES_AUTOHSCROLL
-    EDITTEXT        TXTB_PERSONA_CURP,28,61,84,14,ES_UPPERCASE | ES_AUTOHSCROLL
-    EDITTEXT        TXTB_PERSONA_RFC,135,61,84,14,ES_UPPERCASE | ES_AUTOHSCROLL
-    CONTROL         "",DTP_PERSONA_FECHANACIMIENTO,"SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,245,61,83,15
-    EDITTEXT        TXTB_PERSONA_CALLE,28,87,84,14,ES_UPPERCASE | ES_AUTOHSCROLL
-    EDITTEXT        TXTB_PERSONA_COLONIA,135,87,84,14,ES_UPPERCASE | ES_AUTOHSCROLL
-    EDITTEXT        TXTB_PERSONA_MUNICIPIO,244,87,84,14,ES_UPPERCASE | ES_AUTOHSCROLL
-    EDITTEXT        TXTB_PERSONA_ESTADO,28,116,84,14,ES_UPPERCASE | ES_AUTOHSCROLL
-    COMBOBOX        CB_PERSONA_ESTADOCIVIL,136,117,84,30,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        TXTB_PERSONA_TELEFONO,244,116,84,14,ES_AUTOHSCROLL | ES_NUMBER
-    COMBOBOX        CB_PERSONA_SEXO,28,146,84,30,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        CB_PERSONA_GRUPOOCUPACIONAL,135,146,84,30,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        CB_PERSONA_PERFILRIESGO,244,146,84,30,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        TXTB_PERSONA_APELLIDOPATERNO,28,34,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
+    EDITTEXT        TXTB_PERSONA_APELLIDOMATERNO,135,34,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
+    EDITTEXT        TXTB_PERSONA_NOMBRE,244,34,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
+    EDITTEXT        TXTB_PERSONA_CURP,28,61,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
+    EDITTEXT        TXTB_PERSONA_RFC,135,61,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
+    CONTROL         "",DTP_PERSONA_FECHANACIMIENTO,"SysDateTimePick32",DTS_RIGHTALIGN | WS_GROUP | WS_TABSTOP,245,61,83,15
+    EDITTEXT        TXTB_PERSONA_CALLE,28,87,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
+    EDITTEXT        TXTB_PERSONA_COLONIA,135,87,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
+    EDITTEXT        TXTB_PERSONA_MUNICIPIO,244,87,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
+    EDITTEXT        TXTB_PERSONA_ESTADO,28,116,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
+    COMBOBOX        CB_PERSONA_ESTADOCIVIL,136,117,84,54,CBS_DROPDOWNLIST | CBS_SORT | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+    EDITTEXT        TXTB_PERSONA_TELEFONO,244,116,84,14,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
+    COMBOBOX        CB_PERSONA_SEXO,28,146,84,41,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+    COMBOBOX        CB_PERSONA_GRUPOOCUPACIONAL,135,146,84,50,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+    COMBOBOX        CB_PERSONA_PERFILRIESGO,244,146,84,50,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
     PUSHBUTTON      "CARGAR DOCUMENTO DE IDENTIDAD",BTN_PERSONA_CARGARDOCUMENTO,7,178,135,71,BS_CENTER | BS_VCENTER | BS_MULTILINE
     PUSHBUTTON      "CAPTURAR PERSONA",BTN_PERSONA_CAPTURAR,286,178,63,71,BS_CENTER | BS_VCENTER | BS_MULTILINE
     PUSHBUTTON      "SALIR AL MENU ANTERIOR",BTN_PERSONA_REGRESAR,223,178,63,71,BS_CENTER | BS_VCENTER | BS_MULTILINE
@@ -114,8 +114,8 @@ BEGIN
     LTEXT           "SEXO",IDC_STATIC,61,161,19,8
     LTEXT           "GRUPO OCUPACIONAL",IDC_STATIC,142,161,73,8
     LTEXT           "PERFIL DE RIESGO",IDC_STATIC,255,161,62,8
-    GROUPBOX        "DATOS PERSONA",GB_PERSONA_DATOSPERSONA,7,24,342,147
     CTEXT           "<-------- (INE, Pasaporte, Licencia, Cartilla Militar, Cartilla de vacunación)",IDC_STATIC,147,199,62,42
+    GROUPBOX        "DATOS PERSONA",GB_PERSONA_DATOSPERSONA,7,24,342,147,WS_GROUP | WS_TABSTOP
 END
 
 
@@ -249,16 +249,16 @@ BEGIN
 0x414d, 0x4353, 0x4c55, 0x4e49, 0x004f, 
     CB_PERSONA_SEXO, 0x403, 9, 0
 0x4546, 0x454d, 0x494e, 0x4f4e, "\000" 
-    CB_PERSONA_GRUPOOCUPACIONAL, 0x403, 11, 0
-0x5345, 0x5554, 0x4944, 0x4e41, 0x4554, "\000" 
-    CB_PERSONA_GRUPOOCUPACIONAL, 0x403, 11, 0
-0x5254, 0x4241, 0x4a41, 0x4441, 0x524f, "\000" 
-    CB_PERSONA_GRUPOOCUPACIONAL, 0x403, 12, 0
-0x4544, 0x4553, 0x504d, 0x454c, 0x4441, 0x004f, 
-    CB_PERSONA_GRUPOOCUPACIONAL, 0x403, 15, 0
-0x4d41, 0x2841, 0x294f, 0x4420, 0x2045, 0x4143, 0x4153, "\000" 
-    CB_PERSONA_GRUPOOCUPACIONAL, 0x403, 5, 0
-0x544f, 0x4f52, "\000" 
+    CB_PERSONA_GRUPOOCUPACIONAL, 0x403, 13, 0
+0x4522, 0x5453, 0x4455, 0x4149, 0x544e, 0x2245, "\000" 
+    CB_PERSONA_GRUPOOCUPACIONAL, 0x403, 13, 0
+0x5422, 0x4152, 0x4142, 0x414a, 0x4f44, 0x2252, "\000" 
+    CB_PERSONA_GRUPOOCUPACIONAL, 0x403, 14, 0
+0x4422, 0x5345, 0x4d45, 0x4c50, 0x4145, 0x4f44, 0x0022, 
+    CB_PERSONA_GRUPOOCUPACIONAL, 0x403, 17, 0
+0x4122, 0x414d, 0x4f28, 0x2029, 0x4544, 0x4320, 0x5341, 0x2241, "\000" 
+    CB_PERSONA_GRUPOOCUPACIONAL, 0x403, 7, 0
+0x4f22, 0x5254, 0x224f, "\000" 
     CB_PERSONA_PERFILRIESGO, 0x403, 5, 0
 0x4c41, 0x4f54, "\000" 
     CB_PERSONA_PERFILRIESGO, 0x403, 9, 0
