Se agrego la lista ligada de registro de usuario.

--- a/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.vcxproj
+++ b/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.vcxproj
@@ -143,6 +143,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cCapturaPersona.h" />
+    <ClInclude Include="cCapturaUsuario.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
