Ya se están implementados los dialogos de captura de usuario, carnet, persona y vacuna, falta implementar las listas ligadas de carnet y vacuna. Me estoy tardando porque lo estoy haciendo el codigo y la interfaz lo mas estetico posible, no me repruebe profe!

--- a/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.rc
+++ b/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.rc
@@ -71,6 +71,7 @@ BEGIN
     LTEXT           "Por favor, Inserte sus credenciales:",IDC_STATIC,48,19,115,8
     LTEXT           "Usuario:",IDC_STATIC,19,44,28,8
     LTEXT           "Contraseña:",IDC_STATIC,19,66,38,8
+    GROUPBOX        "DATOS INICIO SESION",GB_INICIOSESION_DATOSINICIOSESION,7,30,197,53,WS_GROUP | WS_TABSTOP
 END
 
 DLG_REGISTROPERSONAS DIALOGEX 0, 0, 356, 256
@@ -88,7 +89,7 @@ BEGIN
     EDITTEXT        TXTB_PERSONA_COLONIA,135,87,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
     EDITTEXT        TXTB_PERSONA_MUNICIPIO,244,87,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
     EDITTEXT        TXTB_PERSONA_ESTADO,28,116,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
-    COMBOBOX        CB_PERSONA_ESTADOCIVIL,136,117,84,54,CBS_DROPDOWNLIST | CBS_SORT | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+    COMBOBOX        CB_PERSONA_ESTADOCIVIL,136,117,84,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
     EDITTEXT        TXTB_PERSONA_TELEFONO,244,116,84,14,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
     COMBOBOX        CB_PERSONA_SEXO,28,146,84,41,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
     COMBOBOX        CB_PERSONA_GRUPOOCUPACIONAL,135,146,84,50,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
@@ -118,25 +119,26 @@ BEGIN
     GROUPBOX        "DATOS PERSONA",GB_PERSONA_DATOSPERSONA,7,24,342,147,WS_GROUP | WS_TABSTOP
 END
 
-DLG_INICIOSESION_REGISTRO DIALOGEX 0, 0, 233, 209
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+DLG_INICIOSESION_REGISTRO DIALOGEX 0, 0, 231, 183
+STYLE DS_SETFONT | DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Menu Registro de Usuario"
-FONT 8, "MS Shell Dlg", 400, 0, 0x1
+FONT 10, "Comic Sans MS", 400, 0, 0x0
 BEGIN
-    EDITTEXT        TXTB_INICIOSESION_REGISTRO_USUARIO,65,40,143,18,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
-    EDITTEXT        TXTB_INICIOSESION_REGISTRO_CONTRASENA,65,64,143,18,ES_PASSWORD | ES_AUTOHSCROLL | WS_GROUP
-    EDITTEXT        TXTB_INICIOSESION_REGISTRO_NOMBRE,65,88,143,18,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
-    EDITTEXT        TXTB_INICIOSESION_REGISTRO_APELLIDOPATERNO,65,111,143,18,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
-    EDITTEXT        TXTB_INICIOSESION_REGISTRO_APELLIDOMATERNO,65,133,143,18,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
-    PUSHBUTTON      "Registrarse",BTN_INICIOSESION_REGISTRO_REGISTRARSE,7,154,219,25,WS_GROUP
-    PUSHBUTTON      "Salir",BTN_INICIOSESION_REGISTRO_SALIR,7,180,219,22,WS_GROUP
+    EDITTEXT        TXTB_INICIOSESION_REGISTRO_USUARIO,75,46,143,12,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
+    EDITTEXT        TXTB_INICIOSESION_REGISTRO_CONTRASENA,75,62,143,12,ES_PASSWORD | ES_AUTOHSCROLL | WS_GROUP
+    EDITTEXT        TXTB_INICIOSESION_REGISTRO_NOMBRE,75,78,143,12,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
+    EDITTEXT        TXTB_INICIOSESION_REGISTRO_APELLIDOPATERNO,75,94,143,12,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
+    EDITTEXT        TXTB_INICIOSESION_REGISTRO_APELLIDOMATERNO,76,109,143,12,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
+    PUSHBUTTON      "Registrarse",BTN_INICIOSESION_REGISTRO_REGISTRARSE,7,127,217,25,WS_GROUP
+    PUSHBUTTON      "Salir",BTN_INICIOSESION_REGISTRO_SALIR,7,152,217,22,WS_GROUP
     CTEXT           "Bienvenido a Registrar un Nuevo Usuario!",IDC_STATIC,19,7,201,10
     LTEXT           "Por favor, Inserte los Datos Solicitados:",IDC_STATIC,55,25,128,10
-    LTEXT           "Usuario:",IDC_STATIC,20,44,33,10
-    LTEXT           "Contraseña:",IDC_STATIC,14,68,45,10
-    LTEXT           "Nombre(s):",IDC_STATIC,18,92,37,10
-    LTEXT           "Apellido Paterno:",IDC_STATIC,5,115,58,10
-    LTEXT           "Apellido Materno:",IDC_STATIC,5,137,58,10
+    LTEXT           "Usuario:",IDC_STATIC,35,47,33,10
+    LTEXT           "Contraseña:",IDC_STATIC,23,63,45,10
+    LTEXT           "Nombre(s):",IDC_STATIC,31,79,37,10
+    LTEXT           "Apellido Paterno:",IDC_STATIC,10,95,58,10
+    LTEXT           "Apellido Materno:",IDC_STATIC,10,110,58,10
+    GROUPBOX        "DATOS REGISTRO",GB_INICIOSESION_REGISTRO_DATOSREGISTRO,7,36,217,90
 END
 
 DLG_REGISTROCARNET DIALOGEX 0, 0, 371, 159
@@ -145,11 +147,10 @@ CAPTION "Bienvenido a Registro de Carnet!"
 FONT 10, "Comic Sans MS", 400, 0, 0x0
 BEGIN
     EDITTEXT        TXTB_CARNET_CURP,48,43,122,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
-    COMBOBOX        CB_CARNET_VACUNA,212,44,131,54,CBS_DROPDOWNLIST | CBS_SORT | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+    COMBOBOX        CB_CARNET_IDVACUNA,222,44,122,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
     EDITTEXT        TXTB_CARNET_LOTE,49,71,108,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
     CONTROL         "",DTP_CARNET_FECHADOSIS,"SysDateTimePick32",DTS_RIGHTALIGN | WS_GROUP | WS_TABSTOP,225,71,116,15,WS_EX_RIGHT | WS_EX_LEFTSCROLLBAR
-    EDITTEXT        TXTB_CARNET_DOSIS,51,97,100,14,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
-    COMBOBOX        CB_DOSIS_CENTROVACUNACION,242,98,99,54,CBS_DROPDOWNLIST | CBS_SORT | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+    COMBOBOX        CB_CARNET_CENTROVACUNACION,242,98,99,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
     PUSHBUTTON      "CAPTURAR PERSONA",BTN_CARNET_CAPTURAR,194,127,170,20,BS_CENTER | BS_VCENTER | BS_MULTILINE
     PUSHBUTTON      "SALIR AL MENU ANTERIOR",BTN_CARNET_REGRESAR,7,127,187,20,BS_CENTER | BS_VCENTER | BS_MULTILINE
     GROUPBOX        "DATOS PERSONA",GB_CARNET_DATOSCARNET,7,29,357,98,WS_GROUP | WS_TABSTOP
@@ -158,9 +159,10 @@ BEGIN
     LTEXT           "CURP:",IDC_STATIC,26,46,20,8
     LTEXT           "FECHA DE DOSIS:",IDC_STATIC,163,74,59,8
     LTEXT           "LOTE:",IDC_STATIC,27,74,20,8
-    LTEXT           "DOSIS:",IDC_STATIC,24,100,25,8
-    LTEXT           "VACUNA:",IDC_STATIC,179,46,30,8
+    LTEXT           "NO. DOSIS:",IDC_STATIC,30,100,39,8
+    LTEXT           "ID VACUNA:",IDC_STATIC,179,46,40,8
     LTEXT           "CENTRO DE VACUNACION:",IDC_STATIC,151,100,87,8
+    COMBOBOX        CB_CARNET_DOSIS,73,98,73,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
 END
 
 DLG_REGISTROVACUNAS DIALOGEX 0, 0, 352, 156
@@ -168,18 +170,18 @@ STYLE DS_ABSALIGN | DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_CE
 CAPTION "Bienvenido a Registro de Vacunas!"
 FONT 10, "Comic Sans MS", 400, 0, 0x0
 BEGIN
-    COMBOBOX        CB_VACUNA_TIPO,59,48,107,54,CBS_DROPDOWNLIST | CBS_SORT | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
-    COMBOBOX        CB_VACUNA_MARCA,233,48,100,54,CBS_DROPDOWNLIST | CBS_SORT | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
-    COMBOBOX        CB_VACUNA_DOSIS,69,68,94,54,CBS_DROPDOWNLIST | CBS_SORT | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
-    EDITTEXT        TXTB_VACUNA_CLAVE,233,67,100,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
+    COMBOBOX        CB_VACUNA_TIPO,35,48,131,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+    COMBOBOX        CB_VACUNA_MARCA,208,48,125,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+    COMBOBOX        CB_VACUNA_DOSIS,69,68,94,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+    EDITTEXT        TXTB_VACUNA_CLAVE,208,67,125,14,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
     EDITTEXT        TXTB_VACUNA_DESCRIPCION,92,91,240,30,ES_MULTILINE | ES_UPPERCASE | ES_AUTOHSCROLL | ES_WANTRETURN | WS_GROUP,WS_EX_LEFTSCROLLBAR
     PUSHBUTTON      "CAPTURAR PERSONA",BTN_VACUNA_CAPTURAR,176,127,169,20,BS_CENTER | BS_VCENTER | BS_MULTILINE
     PUSHBUTTON      "SALIR AL MENU ANTERIOR",BTN_VACUNA_REGRESAR,7,127,169,20,BS_CENTER | BS_VCENTER | BS_MULTILINE
     CTEXT           "ACABA DE ACCEDER A LA OPCIÓN DE REGISTRAR VACUNA",IDC_STATIC,49,7,255,11
     CTEXT           "POR FAVOR, REGISTRE TODOS LOS DATOS DE LA VACUNA",IDC_STATIC,48,18,257,11
-    LTEXT           "TIPO VACUNA:",IDC_STATIC,9,50,49,8
-    LTEXT           "MARCA VACUNA:",IDC_STATIC,176,50,55,8
-    LTEXT           "CLAVE VACUNA:",IDC_STATIC,176,70,52,8
+    LTEXT           "TIPO:",IDC_STATIC,9,50,20,8
+    LTEXT           "MARCA:",IDC_STATIC,176,50,26,8
+    LTEXT           "PRECIO:",IDC_STATIC,176,70,27,8
     LTEXT           "NO. DE DOSIS:",IDC_STATIC,16,70,49,8
     LTEXT           "DESCRIPCION VACUNA:",IDC_STATIC,11,102,78,8
     GROUPBOX        "DATOS VACUNA",GB_VACUNA_DATOSVACUNA,7,30,337,96,WS_GROUP | WS_TABSTOP
@@ -244,17 +246,17 @@ BEGIN
     DLG_INICIOSESION_REGISTRO, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 226
+        RIGHTMARGIN, 224
         VERTGUIDE, 36
         VERTGUIDE, 65
         VERTGUIDE, 119
         TOPMARGIN, 7
-        BOTTOMMARGIN, 202
-        HORZGUIDE, 49
-        HORZGUIDE, 73
-        HORZGUIDE, 97
-        HORZGUIDE, 120
-        HORZGUIDE, 142
+        BOTTOMMARGIN, 176
+        HORZGUIDE, 52
+        HORZGUIDE, 68
+        HORZGUIDE, 84
+        HORZGUIDE, 100
+        HORZGUIDE, 115
     END
 
     DLG_REGISTROCARNET, DIALOG
