Se agregaron todas las listas doblemente ligadas de Usuario, Vacuna, Persona y Carnet, sigue agregar los validadores de cada campo

--- a/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.rc
+++ b/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.rc
@@ -151,7 +151,7 @@ BEGIN
     EDITTEXT        TXTB_CARNET_LOTE,49,71,108,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
     CONTROL         "",DTP_CARNET_FECHADOSIS,"SysDateTimePick32",DTS_RIGHTALIGN | WS_GROUP | WS_TABSTOP,225,71,116,15,WS_EX_RIGHT | WS_EX_LEFTSCROLLBAR
     COMBOBOX        CB_CARNET_CENTROVACUNACION,242,98,99,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
-    PUSHBUTTON      "CAPTURAR PERSONA",BTN_CARNET_CAPTURAR,194,127,170,20,BS_CENTER | BS_VCENTER | BS_MULTILINE
+    PUSHBUTTON      "CAPTURAR CARNET",BTN_CARNET_CAPTURAR,194,127,170,20,BS_CENTER | BS_VCENTER | BS_MULTILINE
     PUSHBUTTON      "SALIR AL MENU ANTERIOR",BTN_CARNET_REGRESAR,7,127,187,20,BS_CENTER | BS_VCENTER | BS_MULTILINE
     GROUPBOX        "DATOS PERSONA",GB_CARNET_DATOSCARNET,7,29,357,98,WS_GROUP | WS_TABSTOP
     CTEXT           "ACABA DE ACCEDER A LA OPCIÓN DE REGISTRAR CARNET",IDC_STATIC,67,7,255,11,SS_CENTERIMAGE
@@ -173,9 +173,9 @@ BEGIN
     COMBOBOX        CB_VACUNA_TIPO,35,48,131,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
     COMBOBOX        CB_VACUNA_MARCA,208,48,125,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
     COMBOBOX        CB_VACUNA_DOSIS,69,68,94,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
-    EDITTEXT        TXTB_VACUNA_CLAVE,208,67,125,14,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
+    EDITTEXT        TXTB_VACUNA_PRECIO,208,67,125,14,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
     EDITTEXT        TXTB_VACUNA_DESCRIPCION,92,91,240,30,ES_MULTILINE | ES_UPPERCASE | ES_AUTOHSCROLL | ES_WANTRETURN | WS_GROUP,WS_EX_LEFTSCROLLBAR
-    PUSHBUTTON      "CAPTURAR PERSONA",BTN_VACUNA_CAPTURAR,176,127,169,20,BS_CENTER | BS_VCENTER | BS_MULTILINE
+    PUSHBUTTON      "CAPTURAR VACUNA",BTN_VACUNA_CAPTURAR,176,127,169,20,BS_CENTER | BS_VCENTER | BS_MULTILINE
     PUSHBUTTON      "SALIR AL MENU ANTERIOR",BTN_VACUNA_REGRESAR,7,127,169,20,BS_CENTER | BS_VCENTER | BS_MULTILINE
     CTEXT           "ACABA DE ACCEDER A LA OPCIÓN DE REGISTRAR VACUNA",IDC_STATIC,49,7,255,11
     CTEXT           "POR FAVOR, REGISTRE TODOS LOS DATOS DE LA VACUNA",IDC_STATIC,48,18,257,11
