Se agregó el esqueleto del validador y se implementó al .h de usuario, falta terminar de agregar codigoen el validador

--- a/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.vcxproj
+++ b/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="cCapturaPersona.h" />
     <ClInclude Include="cCapturaUsuario.h" />
     <ClInclude Include="cCapturaVacuna.h" />
+    <ClInclude Include="cValidadores.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
