--- a/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.vcxproj.filters
+++ b/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.vcxproj.filters
@@ -35,6 +35,9 @@
     <ClInclude Include="cCapturaVacuna.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="cValidadores.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="PROYECTO_ESTRUCTURA_DE_DATOS.rc">
