Ya se implementó que se pueda cargar el documento de identificacion de la persona, tambíen ya se implementó que se borren todos los campos al momento de dar clic en capturar. Ya son 100% funcionales los registros de Personas, Carnets y Vacunas y El inicio de sesion tambien. Sigue implementar todas las validaciones de texto de todos los campos además de validar que no se repitan los datos nuevos a los ya registrados.Luego hacer que las vacunas que se vayan registrando vayan apareciendo conforme se vayan agregando en el registro de Carnets.

--- a/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.rc
+++ b/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.rc
@@ -74,7 +74,7 @@ BEGIN
     GROUPBOX        "DATOS INICIO SESION",GB_INICIOSESION_DATOSINICIOSESION,7,30,197,53,WS_GROUP | WS_TABSTOP
 END
 
-DLG_REGISTROPERSONAS DIALOGEX 0, 0, 356, 256
+DLG_REGISTROPERSONAS DIALOGEX 0, 0, 617, 256
 STYLE DS_ABSALIGN | DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_CENTER | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Bienvenido a Registro de Personas!"
 FONT 10, "Comic Sans MS", 400, 0, 0x0
@@ -95,8 +95,8 @@ BEGIN
     COMBOBOX        CB_PERSONA_GRUPOOCUPACIONAL,135,146,84,50,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
     COMBOBOX        CB_PERSONA_PERFILRIESGO,244,146,84,50,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
     PUSHBUTTON      "CARGAR DOCUMENTO DE IDENTIDAD",BTN_PERSONA_CARGARDOCUMENTO,7,178,135,71,BS_CENTER | BS_VCENTER | BS_MULTILINE
-    PUSHBUTTON      "CAPTURAR PERSONA",BTN_PERSONA_CAPTURAR,286,178,63,71,BS_CENTER | BS_VCENTER | BS_MULTILINE
-    PUSHBUTTON      "SALIR AL MENU ANTERIOR",BTN_PERSONA_REGRESAR,223,178,63,71,BS_CENTER | BS_VCENTER | BS_MULTILINE
+    PUSHBUTTON      "CAPTURAR PERSONA",BTN_PERSONA_CAPTURAR,275,178,50,71,BS_CENTER | BS_VCENTER | BS_MULTILINE
+    PUSHBUTTON      "SALIR AL MENU ANTERIOR",BTN_PERSONA_REGRESAR,210,178,63,71,BS_CENTER | BS_VCENTER | BS_MULTILINE
     LTEXT           "ACABA DE ACCEDER A LA OPCIÓN DE REGISTRAR PERSONA",IDC_STATIC,83,7,191,8
     LTEXT           "POR FAVOR, REGISTRE TODOS LOS DATOS DE LA PERSONA",IDC_STATIC,82,16,193,8
     LTEXT           "APELLIDO PATERNO",IDC_STATIC,37,50,66,8
@@ -116,7 +116,9 @@ BEGIN
     LTEXT           "GRUPO OCUPACIONAL",IDC_STATIC,142,161,73,8
     LTEXT           "PERFIL DE RIESGO",IDC_STATIC,255,161,62,8
     CTEXT           "<-------- (INE, Pasaporte, Licencia, Cartilla Militar, Cartilla de vacunación)",IDC_STATIC,147,199,62,42
-    GROUPBOX        "DATOS PERSONA",GB_PERSONA_DATOSPERSONA,7,24,342,147,WS_GROUP | WS_TABSTOP
+    GROUPBOX        "DATOS PERSONA",GB_PERSONA_DATOSPERSONA,7,24,328,147,WS_GROUP | WS_TABSTOP
+    GROUPBOX        "Vista Preliminar del Archivo Cargado",GB_PERSONA_ARCHIVO,345,7,265,242
+    CONTROL         "",PC_PERSONA_DOCUMENTOIDENTIDAD,"Static",SS_BITMAP | SS_CENTERIMAGE | WS_GROUP | WS_TABSTOP,352,21,248,220
 END
 
 DLG_INICIOSESION_REGISTRO DIALOGEX 0, 0, 231, 183
@@ -222,7 +224,7 @@ BEGIN
     DLG_REGISTROPERSONAS, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 349
+        RIGHTMARGIN, 610
         VERTGUIDE, 70
         VERTGUIDE, 178
         VERTGUIDE, 286
