Se agregaron todas las validaciones necesarias a todos los apartaddos, seguir trabajando con el apartado de carnet para que busque el CURP y la Vacuna y la muestre en los cuadros de texto.

--- a/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.rc
+++ b/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.rc
@@ -55,6 +55,8 @@ STYLE DS_ABSALIGN | DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_CE
 CAPTION "Bienvendio al Menu Principal!!"
 FONT 9, "Comic Sans MS", 400, 0, 0x0
 BEGIN
+    CTEXT           "Nombre de la Persona",LBL_NOMBREUSUARIO1,7,214,376,8,SS_CENTERIMAGE
+    CTEXT           "Hola!",IDC_STATIC,7,204,376,8
 END
 
 DLG_INICIOSESION DIALOGEX 0, 0, 211, 140
@@ -74,7 +76,7 @@ BEGIN
     GROUPBOX        "DATOS INICIO SESION",GB_INICIOSESION_DATOSINICIOSESION,7,30,197,53,WS_GROUP | WS_TABSTOP
 END
 
-DLG_REGISTROPERSONAS DIALOGEX 0, 0, 617, 256
+DLG_REGISTROPERSONAS DIALOGEX 0, 0, 617, 260
 STYLE DS_ABSALIGN | DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_CENTER | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Bienvenido a Registro de Personas!"
 FONT 10, "Comic Sans MS", 400, 0, 0x0
@@ -94,9 +96,9 @@ BEGIN
     COMBOBOX        CB_PERSONA_SEXO,28,146,84,41,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
     COMBOBOX        CB_PERSONA_GRUPOOCUPACIONAL,135,146,84,50,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
     COMBOBOX        CB_PERSONA_PERFILRIESGO,244,146,84,50,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
-    PUSHBUTTON      "CARGAR DOCUMENTO DE IDENTIDAD",BTN_PERSONA_CARGARDOCUMENTO,7,178,135,71,BS_CENTER | BS_VCENTER | BS_MULTILINE
-    PUSHBUTTON      "CAPTURAR PERSONA",BTN_PERSONA_CAPTURAR,275,178,50,71,BS_CENTER | BS_VCENTER | BS_MULTILINE
-    PUSHBUTTON      "SALIR AL MENU ANTERIOR",BTN_PERSONA_REGRESAR,210,178,63,71,BS_CENTER | BS_VCENTER | BS_MULTILINE
+    PUSHBUTTON      "CARGAR DOCUMENTO DE IDENTIDAD",BTN_PERSONA_CARGARDOCUMENTO,7,178,135,47,BS_CENTER | BS_VCENTER | BS_MULTILINE
+    PUSHBUTTON      "CAPTURAR PERSONA",BTN_PERSONA_CAPTURAR,275,178,50,47,BS_CENTER | BS_VCENTER | BS_MULTILINE
+    PUSHBUTTON      "SALIR AL MENU ANTERIOR",BTN_PERSONA_REGRESAR,210,178,63,47,BS_CENTER | BS_VCENTER | BS_MULTILINE
     LTEXT           "ACABA DE ACCEDER A LA OPCIÓN DE REGISTRAR PERSONA",IDC_STATIC,83,7,191,8
     LTEXT           "POR FAVOR, REGISTRE TODOS LOS DATOS DE LA PERSONA",IDC_STATIC,82,16,193,8
     LTEXT           "APELLIDO PATERNO",IDC_STATIC,37,50,66,8
@@ -115,14 +117,16 @@ BEGIN
     LTEXT           "SEXO",IDC_STATIC,61,161,19,8
     LTEXT           "GRUPO OCUPACIONAL",IDC_STATIC,142,161,73,8
     LTEXT           "PERFIL DE RIESGO",IDC_STATIC,255,161,62,8
-    CTEXT           "<-------- (INE, Pasaporte, Licencia, Cartilla Militar, Cartilla de vacunación)",IDC_STATIC,147,199,62,42
+    CTEXT           "<-------- (INE, Pasaporte, Licencia, Cartilla Militar, Cartilla de vacunación)",IDC_STATIC,147,183,62,42
     GROUPBOX        "DATOS PERSONA",GB_PERSONA_DATOSPERSONA,7,24,328,147,WS_GROUP | WS_TABSTOP
-    GROUPBOX        "Vista Preliminar del Archivo Cargado",GB_PERSONA_ARCHIVO,345,7,265,242
+    GROUPBOX        "Vista Preliminar del Archivo Cargado",GB_PERSONA_ARCHIVO,345,7,265,246
     CONTROL         "",PC_PERSONA_DOCUMENTOIDENTIDAD,"Static",SS_BITMAP | SS_CENTERIMAGE | WS_GROUP | WS_TABSTOP,352,21,248,220
+    CTEXT           "Nombre de la Persona",LBL_NOMBREUSUARIO3,7,245,329,8,SS_CENTERIMAGE
+    CTEXT           "Hola!",IDC_STATIC,7,232,329,8
 END
 
 DLG_INICIOSESION_REGISTRO DIALOGEX 0, 0, 231, 183
-STYLE DS_SETFONT | DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_CENTER | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Menu Registro de Usuario"
 FONT 10, "Comic Sans MS", 400, 0, 0x0
 BEGIN
@@ -143,31 +147,79 @@ BEGIN
     GROUPBOX        "DATOS REGISTRO",GB_INICIOSESION_REGISTRO_DATOSREGISTRO,7,36,217,90
 END
 
-DLG_REGISTROCARNET DIALOGEX 0, 0, 371, 159
+DLG_REGISTROCARNET DIALOGEX 0, 0, 701, 300
 STYLE DS_ABSALIGN | DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_CENTER | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Bienvenido a Registro de Carnet!"
 FONT 10, "Comic Sans MS", 400, 0, 0x0
 BEGIN
-    EDITTEXT        TXTB_CARNET_CURP,48,43,122,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
-    COMBOBOX        CB_CARNET_IDVACUNA,222,44,122,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
-    EDITTEXT        TXTB_CARNET_LOTE,49,71,108,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
-    CONTROL         "",DTP_CARNET_FECHADOSIS,"SysDateTimePick32",DTS_RIGHTALIGN | WS_GROUP | WS_TABSTOP,225,71,116,15,WS_EX_RIGHT | WS_EX_LEFTSCROLLBAR
-    COMBOBOX        CB_CARNET_CENTROVACUNACION,242,98,99,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
-    PUSHBUTTON      "CAPTURAR CARNET",BTN_CARNET_CAPTURAR,194,127,170,20,BS_CENTER | BS_VCENTER | BS_MULTILINE
-    PUSHBUTTON      "SALIR AL MENU ANTERIOR",BTN_CARNET_REGRESAR,7,127,187,20,BS_CENTER | BS_VCENTER | BS_MULTILINE
-    GROUPBOX        "DATOS PERSONA",GB_CARNET_DATOSCARNET,7,29,357,98,WS_GROUP | WS_TABSTOP
-    CTEXT           "ACABA DE ACCEDER A LA OPCIÓN DE REGISTRAR CARNET",IDC_STATIC,67,7,255,11,SS_CENTERIMAGE
-    CTEXT           "POR FAVOR, REGISTRE TODOS LOS DATOS DEL CARNET",IDC_STATIC,66,18,257,11
-    LTEXT           "CURP:",IDC_STATIC,26,46,20,8
-    LTEXT           "FECHA DE DOSIS:",IDC_STATIC,163,74,59,8
-    LTEXT           "LOTE:",IDC_STATIC,27,74,20,8
-    LTEXT           "NO. DOSIS:",IDC_STATIC,30,100,39,8
-    LTEXT           "ID VACUNA:",IDC_STATIC,179,46,40,8
-    LTEXT           "CENTRO DE VACUNACION:",IDC_STATIC,151,100,87,8
-    COMBOBOX        CB_CARNET_DOSIS,73,98,73,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+    EDITTEXT        TXTB_CARNET_LOTE,383,165,108,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
+    CONTROL         "",DTP_CARNET_FECHADOSIS,"SysDateTimePick32",DTS_RIGHTALIGN | WS_GROUP | WS_TABSTOP,556,165,116,15,WS_EX_RIGHT | WS_EX_LEFTSCROLLBAR
+    COMBOBOX        CB_CARNET_CENTROVACUNACION,565,198,99,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+    PUSHBUTTON      "CAPTURAR CARNET",BTN_CARNET_CAPTURAR,523,248,171,20,BS_CENTER | BS_VCENTER | BS_MULTILINE
+    PUSHBUTTON      "SALIR AL MENU ANTERIOR",BTN_CARNET_REGRESAR,351,248,172,20,BS_CENTER | BS_VCENTER | BS_MULTILINE
+    GROUPBOX        "DATOS PERSONA",GB_CARNET_DATOSPERSONA,7,33,344,211,WS_GROUP | WS_TABSTOP
+    CTEXT           "ACABA DE ACCEDER A LA OPCIÓN DE REGISTRAR CARNET",IDC_STATIC,7,7,687,11,SS_CENTERIMAGE
+    CTEXT           "POR FAVOR, REGISTRE TODOS LOS DATOS DEL CARNET",IDC_STATIC,7,18,687,11
+    LTEXT           "CURP:",IDC_STATIC,99,46,20,8
+    LTEXT           "FECHA DE DOSIS:",IDC_STATIC,494,168,59,8
+    LTEXT           "LOTE:",IDC_STATIC,362,168,20,8
+    LTEXT           "NO. DOSIS:",IDC_STATIC,359,200,39,8
+    LTEXT           "ID VACUNA:",IDC_STATIC,429,46,40,8
+    LTEXT           "CENTRO DE VACUNACION:",IDC_STATIC,476,200,87,8
+    COMBOBOX        CB_CARNET_DOSIS,400,198,73,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+    CTEXT           "Nombre de la Persona",LBL_NOMBREUSUARIO4,7,280,687,8,SS_CENTERIMAGE
+    CTEXT           "Hola!",IDC_STATIC,7,271,687,8
+    GROUPBOX        "DATOS VACUNA",GB_CARNET_DATOSVACUNA,351,33,343,107,WS_GROUP | WS_TABSTOP
+    GROUPBOX        "CAPTURA CARNET",GB_CARNET_DATOSCARNET,351,140,343,104,WS_GROUP | WS_TABSTOP
+    EDITTEXT        TXTB_CARNET_PERSONA_APELLIDOPATERNO,35,64,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
+    EDITTEXT        TXTB_CARNET_PERSONA_APELLIDOMATERNO,142,64,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
+    EDITTEXT        TXTB_CARNET_PERSONA_NOMBRE,251,64,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
+    EDITTEXT        TXTB_CARNET_PERSONA_CURP,35,91,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
+    EDITTEXT        TXTB_CARNET_PERSONA_RFC,142,91,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
+    EDITTEXT        TXTB_CARNET_PERSONA_CALLE,35,117,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
+    EDITTEXT        TXTB_CARNET_PERSONA_COLONIA,142,117,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
+    EDITTEXT        TXTB_CARNET_PERSONA_MUNICIPIO,251,117,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
+    EDITTEXT        TXTB_CARNET_PERSONA_ESTADO,249,209,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
+    EDITTEXT        TXTB_CARNET_PERSONA_TELEFONO,251,146,84,14,ES_AUTOHSCROLL | ES_READONLY | ES_NUMBER | WS_GROUP
+    LTEXT           "APELLIDO PATERNO",IDC_STATIC,44,80,66,8
+    LTEXT           "APELLIDO MATERNO",IDC_STATIC,151,80,68,8
+    LTEXT           "NOMBRE(S)",IDC_STATIC,274,80,38,8
+    LTEXT           "CURP",IDC_STATIC,68,106,18,8
+    LTEXT           "RCF",IDC_STATIC,179,106,13,8
+    LTEXT           "FECHA DE NACIMIENTO",IDC_STATIC,253,106,80,8
+    LTEXT           "CALLE Y NUMERO",IDC_STATIC,48,133,58,8
+    LTEXT           "COLONIA",IDC_STATIC,169,133,32,8
+    LTEXT           "MUNICIPIO",IDC_STATIC,273,133,40,8
+    LTEXT           "ESTADO",IDC_STATIC,277,224,28,8
+    LTEXT           "ESTADO CIVIL",IDC_STATIC,161,161,49,8
+    LTEXT           "TELEFONO CELULAR",IDC_STATIC,260,162,67,8
+    LTEXT           "(A 10 DÍGITOS)",IDC_STATIC,267,170,52,8
+    LTEXT           "SEXO",IDC_STATIC,178,224,19,8
+    LTEXT           "GRUPO OCUPACIONAL",IDC_STATIC,149,196,73,8
+    LTEXT           "PERFIL DE RIESGO",IDC_STATIC,262,196,62,8
+    EDITTEXT        TXTB_CARNET_PERSONA_FECHANACIMIENTO,251,90,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
+    EDITTEXT        TXTB_CARNET_PERSONA_ESTADOCIVIL,144,146,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
+    EDITTEXT        TXTB_CARNET_PERSONA_SEXO,145,209,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
+    EDITTEXT        TXTB_CARNET_PERSONA_GRUPOOCUPACIONAL,144,180,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
+    EDITTEXT        TXTB_CARNET_PERSONA_PERFILDERIESGO,248,180,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
+    CONTROL         "",PC_CARNET_PERSONA_DOCUMENTOIDENTIFICACION,"Static",SS_BITMAP | SS_CENTERIMAGE,24,147,102,91
+    EDITTEXT        TXTB_CARNET_VACUNA_PRECIO,569,78,115,14,ES_AUTOHSCROLL | ES_READONLY | ES_NUMBER | WS_GROUP
+    EDITTEXT        TXTB_CARNET_VACUNA_DESCRIPCION,444,96,240,30,ES_MULTILINE | ES_UPPERCASE | ES_AUTOHSCROLL | ES_READONLY | ES_WANTRETURN | WS_GROUP,WS_EX_LEFTSCROLLBAR
+    LTEXT           "TIPO:",IDC_STATIC,361,64,20,8
+    LTEXT           "MARCA:",IDC_STATIC,528,64,26,8
+    LTEXT           "PRECIO:",IDC_STATIC,538,81,27,8
+    LTEXT           "NO. DE DOSIS:",IDC_STATIC,358,81,49,8
+    LTEXT           "DESCRIPCION VACUNA:",IDC_STATIC,363,107,78,8
+    EDITTEXT        TXTB_CARNET_VACUNA_DOSIS,409,78,125,14,ES_AUTOHSCROLL | ES_READONLY | ES_NUMBER | WS_GROUP
+    EDITTEXT        TXTB_CARNET_VACUNA_TIPO,384,61,125,14,ES_AUTOHSCROLL | ES_READONLY | ES_NUMBER | WS_GROUP
+    EDITTEXT        TXTB_CARNET_VACUNA_MARCA,558,61,125,14,ES_AUTOHSCROLL | ES_READONLY | ES_NUMBER | WS_GROUP
+    COMBOBOX        CB_CARNET_IDVACUNA,470,44,122,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+    PUSHBUTTON      "BUSCAR CURP",BTN_CARNET_BUSCARCURP,7,248,172,20,BS_CENTER | BS_VCENTER | BS_MULTILINE
+    PUSHBUTTON      "BUSCAR VACUNA",BTN_CARNET_BUSCARVACUNA,179,248,172,20,BS_CENTER | BS_VCENTER | BS_MULTILINE
+    COMBOBOX        CB_CARNET_CURP,122,44,122,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
 END
 
-DLG_REGISTROVACUNAS DIALOGEX 0, 0, 352, 156
+DLG_REGISTROVACUNAS DIALOGEX 0, 0, 352, 180
 STYLE DS_ABSALIGN | DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_CENTER | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Bienvenido a Registro de Vacunas!"
 FONT 10, "Comic Sans MS", 400, 0, 0x0
@@ -187,6 +239,8 @@ BEGIN
     LTEXT           "NO. DE DOSIS:",IDC_STATIC,16,70,49,8
     LTEXT           "DESCRIPCION VACUNA:",IDC_STATIC,11,102,78,8
     GROUPBOX        "DATOS VACUNA",GB_VACUNA_DATOSVACUNA,7,30,337,96,WS_GROUP | WS_TABSTOP
+    CTEXT           "Nombre de la Persona",LBL_NOMBREUSUARIO2,7,165,338,8,SS_CENTERIMAGE
+    CTEXT           "Hola!",IDC_STATIC,7,152,338,8
 END
 
 
@@ -204,6 +258,7 @@ BEGIN
         RIGHTMARGIN, 383
         TOPMARGIN, 7
         BOTTOMMARGIN, 230
+        HORZGUIDE, 208
     END
 
     DLG_INICIOSESION, DIALOG
@@ -228,8 +283,9 @@ BEGIN
         VERTGUIDE, 70
         VERTGUIDE, 178
         VERTGUIDE, 286
+        VERTGUIDE, 336
         TOPMARGIN, 7
-        BOTTOMMARGIN, 249
+        BOTTOMMARGIN, 253
         HORZGUIDE, 41
         HORZGUIDE, 54
         HORZGUIDE, 68
@@ -243,6 +299,7 @@ BEGIN
         HORZGUIDE, 171
         HORZGUIDE, 178
         HORZGUIDE, 199
+        HORZGUIDE, 225
     END
 
     DLG_INICIOSESION_REGISTRO, DIALOG
@@ -264,15 +321,30 @@ BEGIN
     DLG_REGISTROCARNET, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 364
+        RIGHTMARGIN, 694
         VERTGUIDE, 109
         VERTGUIDE, 194
         VERTGUIDE, 277
+        VERTGUIDE, 351
+        VERTGUIDE, 437
+        VERTGUIDE, 523
+        VERTGUIDE, 614
         TOPMARGIN, 7
-        BOTTOMMARGIN, 147
+        BOTTOMMARGIN, 288
+        HORZGUIDE, 33
         HORZGUIDE, 50
+        HORZGUIDE, 68
         HORZGUIDE, 78
+        HORZGUIDE, 85
         HORZGUIDE, 104
+        HORZGUIDE, 140
+        HORZGUIDE, 153
+        HORZGUIDE, 172
+        HORZGUIDE, 187
+        HORZGUIDE, 204
+        HORZGUIDE, 216
+        HORZGUIDE, 244
+        HORZGUIDE, 258
     END
 
     DLG_REGISTROVACUNAS, DIALOG
@@ -283,7 +355,7 @@ BEGIN
         VERTGUIDE, 176
         VERTGUIDE, 277
         TOPMARGIN, 7
-        BOTTOMMARGIN, 149
+        BOTTOMMARGIN, 173
         HORZGUIDE, 54
         HORZGUIDE, 74
         HORZGUIDE, 106
@@ -342,11 +414,11 @@ BEGIN
         MENUITEM "Registro de Personas",        MENU_REGISTRO_PERSONAS
         MENUITEM "Registro de Carnets",         MENU_REGISTRO_CARNETS
     END
-    POPUP "REPORTE"
+    POPUP "REPORTE Y EDICION"
     BEGIN
-        MENUITEM "Reporte de Vacunas",          MENU_REPORTE_VACUNAS
-        MENUITEM "Reporte de Personas",         MENU_REPORTE_PERSONAS
-        MENUITEM "Reporte de Carnets",          MENU_REPORTE_CARNETS
+        MENUITEM "Reporte y Edicion de Vacunas", MENU_REPORTE_VACUNAS
+        MENUITEM "Reporte y Edicion de Personas", MENU_REPORTE_PERSONAS
+        MENUITEM "Reporte y Edicion de Carnets", MENU_REPORTE_CARNETS
     END
     POPUP "AYUDA"
     BEGIN
@@ -354,7 +426,6 @@ BEGIN
     END
     POPUP "SISTEMA"
     BEGIN
-        MENUITEM "Usuarios",                    MENU_SISTEMA_USUARIOS
         MENUITEM "Cerrar Sesion",               MENU_SISTEMA_CERRARSESION
         MENUITEM "Salir",                       MENU_SISTEMA_SALIR
     END
