Ya es totalmente funcional y validada las ventanas de registro usuario, inicio sesion, registro persona, registro vacuna, registro carnet, siguen implementar las ventanas de Reporte y edicion.

--- a/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.rc
+++ b/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.rc
@@ -217,6 +217,8 @@ BEGIN
     PUSHBUTTON      "BUSCAR CURP",BTN_CARNET_BUSCARCURP,7,248,172,20,BS_CENTER | BS_VCENTER | BS_MULTILINE
     PUSHBUTTON      "BUSCAR VACUNA",BTN_CARNET_BUSCARVACUNA,179,248,172,20,BS_CENTER | BS_VCENTER | BS_MULTILINE
     COMBOBOX        CB_CARNET_CURP,122,44,122,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+    CONTROL         "",DTP_CARNET_FECHAPROXDOSIS,"SysDateTimePick32",DTS_RIGHTALIGN | WS_GROUP | WS_TABSTOP,465,216,116,15,WS_EX_RIGHT | WS_EX_LEFTSCROLLBAR
+    LTEXT           "FECHA DE PROXIMA DOSIS:",IDC_STATIC,370,220,92,8
 END
 
 DLG_REGISTROVACUNAS DIALOGEX 0, 0, 352, 180
